# launcher-schizophrenia

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
mine-resource/: mine-linux.7z  mine-windows.7z
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  config.rs  discord_rpc.rs  exit_unwrap.rs  game.rs  logger.rs  main.rs  path.rs
src-tauri/src/config/: command.rs
src-tauri/src/game/: command.rs  download.rs  downloader.rs  error.rs  flags.rs  java.rs
url/: linux.txt  windows.txt
