[package]
name = "launcher-schizophrenia"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "4.1"
color-eyre = "0.6"
sysinfo = "0.28"
bytesize = "1"
reqwest = { version = "0.11", features = ["stream"] }
chksum = { version = "0.1.0-rc5", default-features = false, features = ["sha2_256"] }
anyhow = { version = "1", features = ["backtrace"] }
dirs = "5"
tempfile = "3"
futures-util = "0.3.28"
sevenz-rust = { version = "0.2.10", default-features = false }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = 'fat'
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros"] }
