[package]
name = "launcher-schizophrenia"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "4.1"
color-eyre = "0.6"
bytesize = "1"
reqwest = { version = "0.11", features = ["stream"] }
chksum = { version = "0.1.0-rc5", default-features = false, features = ["sha2_256"] }
anyhow = { version = "1", features = ["backtrace"] }
dirs = "5"
futures-util = "0.3"
sevenz-rust = { version = "0.2", default-features = false }
lazy_static = "1.4"
open = "4.1.0"
discord-rpc-client = "0.3.0"
sysinfo = "0.29.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = 'fat'
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
codegen-units = 500

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros"] }

[profile.dev.package."sevenz-rust"]
opt-level = 3
