[package]
name = "launcher-schizophrenia"
version = "0.1.0"
description = "Лаунчер для Шизофрении Технотопии"
authors = ["CryptoGladi <mymamchm@mail.ru>"]
license = "MIT"
repository = "https://github.com/CryptoGladi/launcher-schizophrenia"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
color-eyre = "0.6"
bytesize = "1"
reqwest = { version = "0.11", features = ["stream"] }
anyhow = { version = "1", features = ["backtrace"] }
dirs = "5"
futures-util = "0.3"
sevenz-rust = { version = "0.2", default-features = false }
open = "4.1.0"
discord-rpc-client = "0.3.0"
sysinfo = "0.29.2"
log4rs = { version = "1.2", default-features = false, features = ["file_appender", "threshold_filter", "console_appender"] }
remove_dir_all = { version = "0.8.2", features = ["parallel"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = 'fat'
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
codegen-units = 500

[dev-dependencies]
tokio = { version = "1.28.1", features = ["macros"] }
